changed volume names

--- a/argocd/Media/applications/books/calibre-web/deployment.yml
+++ b/argocd/Media/applications/books/calibre-web/deployment.yml
@@ -41,7 +41,7 @@ spec:
             mountPath: /books
 
       volumes:
-        - name: media
+        - name: books
           nfs:
             server: 10.0.50.4
             path: /mnt/Slow/Media/books
