--- a/argocd/Media/applications/books/calibre/deployment.yml
+++ b/argocd/Media/applications/books/calibre/deployment.yml
@@ -45,7 +45,7 @@ spec:
         - name: books
           nfs:
             server: 10.0.50.4
-            path: /mnt/Slow/Media
+            path: /mnt/Slow/Media/books
 
         - name: config
           persistentVolumeClaim:
