--- a/argocd/Media/applications/delugevpn/deployment.yml
+++ b/argocd/Media/applications/delugevpn/deployment.yml
@@ -84,12 +84,19 @@ spec:
             - name: config
               mountPath: /config
 
+            - name: books
+              mountPath: /books
+
       volumes:
         - name: media
           nfs:
             server: 10.0.40.4
             path: /mnt/Slow/Media/Downloads
 
+        - name: books
+          nfs:
+            server: 10.0.40.4
+            path: /mnt/Slow/Media/books
         - name: config
           persistentVolumeClaim:
              claimName: delugevpn-config
