--- a/argocd/Media/applications/sonarr/deployment.yml
+++ b/argocd/Media/applications/sonarr/deployment.yml
@@ -20,6 +20,9 @@ spec:
     spec:
       containers:
         - name: sonarr
+          environment:
+          - PUID=0
+          - PGID=0
           
           image: linuxserver/sonarr
           resources:
