--- a/argocd/Media/applications/sonarr/deployment.yml
+++ b/argocd/Media/applications/sonarr/deployment.yml
@@ -33,7 +33,9 @@ spec:
              
           ports:
             - containerPort: 8989
-          
+          volumeMounts:
+            #- name: media
+             # mountPath: /media
 
             - name: config
               mountPath: /config
