--- a/argocd/Media/applications/sonarr/deployment.yml
+++ b/argocd/Media/applications/sonarr/deployment.yml
@@ -50,6 +50,9 @@ spec:
           nfs:
             server: 10.0.50.4
             path: /mnt/Slow/Media
+            nfsvers: "4.1"
+            mountOptions:
+              - "nolock"
 
         - name: config
           persistentVolumeClaim:
